error
/******************************************************************************

                              Online C++ Compiler.
               Code, Compile, Run and Debug C++ program online.
Write your code in this editor and press "Run" button to compile and execute it.

*******************************************************************************/

#include <iostream>

using namespace std;

int main()
{
    // Write C++ code here
     int n;
   cout << "enter number";
   cin >> n;
string s3= temp(n);
       cout << s3;
    return 0;
}
string temp(int n){
        if(n==1){
            return "1";
        }
        string s=temp(n-1);
        int count=0;
        char number=0;
        string s1="";
        for(int i=1;i<=s.size();i++){
            if(i==1){
                number=s[i];
                count++;
            }else if(s[i]==s[i-1]){
                count++;
            }else{
                s1+=to_string(count);
                s1+=number;
                count=1;
                number=s[i];
            }
        }
        return s;
    }
give error

   OnlineGDB beta
online compiler and debugger for c/c++
code. compile. run. debug. share.
IDE
My Projects
Classroom new
Learn Programming
Programming Questions
Jobs new
Sign Up
Login
About • FAQ • Blog • Terms of Use • Contact Us • GDB Tutorial • Credits • Privacy
© 2016 - 2023 GDB Online
       Language 
C++
  
main.cpp
        return s;
    }


   
input
stderr
Compilation failed due to following error(s).main.cpp: In function ‘int main()’:
main.cpp:19:12: error: ‘temp’ was not declared in this scope; did you mean ‘tm’?
   19 | string s3= temp(n);
      |            ^~~~
      |            tm
in c++
